--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home logo" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
+                    <a class="home logo" href="index.html#top"><img class="logoButton transition-transform rounded-full hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
