--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <source src="portfolioVideo.mp4" type="video/mp4">
             Your browsers does not support video
         </video>
-        <button class="videoPause pause text-4xl text-end text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i></i></button>
+        <button class="videoPause pause text-4xl text-center text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i> Pause</button>
         <div class="flex flex-col mt-16 mx-8 mb-4 md:mt-0 md:bottom-16 md:absolute md:max-w-[70%] ">
             <h1 class="text-5xl my-2 mt-4 scrollHide mb-8">About me</h1>
             <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
