--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     </head>
 <body class="bg-cover bg-gradient-to-b from-black to-gray-900">
     <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
-            <div class="menuItem mx-1 my-1 ">
+        <div class="flex bg-orange-500 w-full gap-4 text-s font-mono">
+            <div class="menuItem my-1 ">
                     <a class="home logo" href="index.html#top"><img class="logoButton transition-transform rounded-full hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
@@ -35,7 +35,7 @@
                 </button>
             </div>
         </div>  
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-4 items-right text-right justify-evenly bg-orange-500 absolute right-0 customHidden md:hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-4 items-right text-right justify-evenly bg-orange-500 absolute right-0  hidden md:hidden">
             <div class="menuItem w-full mt-2 py-4 border-b border-gray-800 text-left">
                 <a class="home home2 p-4 hover:bg-orange-300 w-full hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home <i class="fa-solid fa-arrow-right"></i></a>
             </div>
@@ -51,7 +51,7 @@
             <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark "></i></button>
         </div>
     </header>
-    <img src="https://placeholder.pics/svg/800x400" alt="About Banner" width=100%>
+    <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600" alt="About Banner" width=100%> <!--- https://placeholder.pics/svg/800x400-->
     <div class="m-8">
     <h1 class="text-5xl my-6 scrollHide">About me</h1>
     <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
