--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
 </head>
 <body id="top" class="bg-cover bg-gradient-to-b from-black to-gray-900">
     <div class="homeMain " id="Main">
-    <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
-            <div class="menuItem mx-1 my-1 ">
-                    <a class="home logo" href="index.html#top"><img class="logoButton transition-transform rounded-full hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
-            </div>
-            <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
-                <div class="menuItem">
-                    <a class="home py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
+        <header class="navBarMain sticky top-0">
+            <div class="flex bg-orange-500 w-full gap-4 text-s font-mono">
+                <div class="menuItem my-1 ">
+                        <a class="home logo" href="index.html#top"><img class="logoButton transition-transform rounded-full hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
                 </div>
-                <div class="menuItem ">
-                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html" alt="about navigation">About me</a>
+                <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
+                    <div class="menuItem">
+                        <a class="home py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
+                    </div>
+                    <div class="menuItem ">
+                        <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html" alt="about navigation">About me</a>
+                    </div>
+                    <div class="menuItem ">
+                        <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html" alt="contact navigation">Contact me</a>
+                    </div>
+                    <div class="menuItem float-right rounded-full bg-black py-2 px-3 mr-2 ">
+                        <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
+                    </div>
                 </div>
-                <div class="menuItem ">
-                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html" alt="contact navigation">Contact me</a>
+                <div class="flex menuItem items-center md:hidden absolute right-0 top-1">
+                    <button class="navchange float-right md:hidden" alt="menu toggle">   
+                        <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
+                    </button>
                 </div>
-                <div class="menuItem float-right rounded-full bg-black py-2 px-3 mr-2 ">
-                    <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
+            </div>  
+            <div class="floatingNav flex flex-col w-5/6 py-2 gap-4 items-right text-right justify-evenly bg-orange-500 absolute right-0  hidden md:hidden">
+                <div class="menuItem w-full mt-2 py-4 border-b border-gray-800 text-left">
+                    <a class="home home2 p-4 hover:bg-orange-300 w-full hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
+                <div class="menuItem w-full pb-4 border-b border-gray-800 text-left">
+                    <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline" href="about.html" alt="about navigation">About me <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+                <div class="menuItem w-full  pb-4 border-b border-gray-800 text-left">
+                    <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline " href="contact.html" alt="contact navigation">Contact me <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+                <div class="menuItem float-right text-center my-6 ">
+                    <button class="download rounded-full  bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1" alt="download button"></i></button>
+                </div>
+                <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark "></i></button>
             </div>
-            <div class="flex menuItem items-center md:hidden absolute right-0 top-1">
-                <button class="navchange float-right md:hidden" alt="menu toggle">   
-                    <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
-                </button>
-            </div>
-        </div>  
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-4 items-right text-right justify-evenly bg-orange-500 absolute right-0 customHidden md:hidden">
-            <div class="menuItem w-full mt-2 py-4 border-b border-gray-800 text-left">
-                <a class="home home2 p-4 hover:bg-orange-300 w-full hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="menuItem w-full pb-4 border-b border-gray-800 text-left">
-                <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline" href="about.html" alt="about navigation">About me <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="menuItem w-full  pb-4 border-b border-gray-800 text-left">
-                <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline " href="contact.html" alt="contact navigation">Contact me <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="menuItem float-right text-center my-6 ">
-                <button class="download rounded-full  bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1" alt="download button"></i></button>
-            </div>
-            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark "></i></button>
-        </div>
-    </header>
+        </header>
 
     <section class="videoSection">
     <div class="relative">
