Better spacing and styling to about

--- a/about.html
+++ b/about.html
@@ -51,33 +51,37 @@
             <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark "></i></button>
         </div>
     </header>
-    <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600" alt="About Banner" width=100%> <!--- https://placeholder.pics/svg/800x400-->
-    <div class="m-8">
-    <h1 class="text-5xl my-6 scrollHide">About me</h1>
-    <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
-    <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
-    <h1 class="text-5xl my-6 scrollHide">Skills</h1>
-    <!-- Change grid-cols based on items -->
-    <div class="max-md:grid max-md:grid-cols-2 gap-8 text-8xl flex flex-row text-center flex-wrap justify-center">
-        <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
-            <i class="fa-brands fa-js w-22 max-w-fit h-22  p-2 text-center"></i>
-            <p class="text-base">Javascript</p>
+    <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600 w-screen md:w-11/12 mx-auto" alt="About Banner" > <!--- https://placeholder.pics/svg/800x400-->
+    <section class="mx-8 my-16">
+        <h1 class="text-5xl my-6 scrollHide">About me</h1>
+        <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
+        <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
+    </section>
+    <section class="mx-8 my-16">
+        <h1 class="text-5xl my-6 scrollHide text-center">Skills</h1>
+        <!-- Change grid-cols based on items -->
+        <div class="max-md:grid max-md:grid-cols-2 gap-8 text-8xl flex flex-row text-center flex-wrap justify-center">
+            <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
+                <i class="fa-brands fa-js w-22 max-w-fit h-22  p-2 text-center"></i>
+                <p class="text-base">Javascript</p>
+            </div>
+            <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
+                <i class=" fa-brands fa-java w-22 max-w-fit h-22  p-2 text-center "></i>
+                <p class="text-base">Java</p>
+            </div>
+            <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
+                <i class="  fa-brands fa-python w-22 max-w-fit h-22  p-2 text-center "></i>
+                <p class="text-base">Python</p>
+            </div>
+            <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
+                <i class=" fa-brands fa-php text-8 xl w-22 max-w-fit h-22  p-2 text-center  "></i>
+                <p class="text-base">Php</p>
+            </div>
         </div>
-        <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
-            <i class=" fa-brands fa-java w-22 max-w-fit h-22  p-2 text-center "></i>
-            <p class="text-base">Java</p>
-        </div>
-        <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
-            <i class="  fa-brands fa-python w-22 max-w-fit h-22  p-2 text-center "></i>
-            <p class="text-base">Python</p>
-        </div>
-        <div class=" logo scrollHide w-fit border m-2 hover:bg-gray-500">
-            <i class=" fa-brands fa-php text-8 xl w-22 max-w-fit h-22  p-2 text-center  "></i>
-            <p class="text-base">Php</p>
-        </div>
-    </div>
-    <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
-    <p class="text-2xl my-6">content goes here</p>
-    </div>
+    </section>
+    <section class="mx-8 my-16">
+        <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
+        <p class="text-2xl my-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem adipisci maiores eius quasi fugit placeat tempora expedita ducimus, ullam obcaecati facilis sunt labore, fuga soluta quod tempore explicabo voluptatem!</p>
+    </section>       
 </body>
 </html>
