--- a/contact.html
+++ b/contact.html
@@ -89,5 +89,8 @@
         </div>
     </div>
     </section>
+    <footer class="w-full h-[50px] border-t bg-cover bg-gray-700">
+        <p class="m-4">2024</p>
+    </footer>
 </body>
 </html>
