--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         </div>
     </section>
     </div>
-
+    <footer class="w-full h-[50px] border-t bg-cover bg-gray-700">
+        <p class="m-4">2024</p>
+    </footer>
 </body>
 </html>
