--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         </div>
     </section>
     <section class="mx-8 my-16">
-        <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
+        <h1 class="text-5xl my-6 scrollHide">Qualifications</h1>
         <p class="text-2xl my-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem adipisci maiores eius quasi fugit placeat tempora expedita ducimus, ullam obcaecati facilis sunt labore, fuga soluta quod tempore explicabo voluptatem!</p>
     </section>
     <footer class="w-full h-[50px] border-t bg-cover bg-gray-700">
