Added More content

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     <section class="mx-8 my-16">
         <h1 class="text-5xl my-6 scrollHide">About me</h1>
         <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
-        <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
+        <p class="text-2xl">I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention. This was especially true for technologies like reinforced learning. I have always been the one in my family to help with tech issues. I have enjoyed this journey of betterment in software development during iO Academy. </p>
     </section>
     <section class="mx-8 my-16">
         <h1 class="text-5xl my-6 scrollHide text-center">Skills</h1>
@@ -79,10 +79,10 @@
             </div>
         </div>
     </section>
-    <section class="mx-8 my-16">
-        <h1 class="text-5xl my-6 scrollHide">Qualifications</h1>
-        <p class="text-2xl my-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem adipisci maiores eius quasi fugit placeat tempora expedita ducimus, ullam obcaecati facilis sunt labore, fuga soluta quod tempore explicabo voluptatem!</p>
-    </section>
+<!--    <section class="mx-8 my-16">-->
+<!--        <h1 class="text-5xl my-6 scrollHide">Qualifications</h1>-->
+<!--        <p class="text-2xl my-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem adipisci maiores eius quasi fugit placeat tempora expedita ducimus, ullam obcaecati facilis sunt labore, fuga soluta quod tempore explicabo voluptatem!</p>-->
+<!--    </section>-->
     <footer class="w-full h-[50px] border-t bg-cover bg-gray-700">
         <p class="m-4">2024</p>
     </footer>       
