--- a/contact.html
+++ b/contact.html
@@ -52,40 +52,38 @@
         </div>
     </header>
     <section>
-    <img src="https://placeholder.pics/svg/800x400" alt="Contact Banner" width=100%>
+    <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600 w-screen md:w-11/12 mx-auto"alt="Contact Banner" width=100%>
     <div class="m-6">
         <h1 class="text-5xl scrollHide">Contact Me</h1>
         <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
         <p><i class="fa-solid fa-pencil"></i> Name: Milan Fernando</p>
-        <p><i class="fa-solid fa-pencil"></i> Age: 24</p>
-        <p><i class="fa-regular fa-envelope"></i> Email: something@gmail.com</p>
-        <p><i class="fa-brands fa-linkedin"></i> Linkin: <a a class="hover:text-sky-500 hover:underline" href="">Link Text</a></p>
-        <p class="text-2l"><i class="fa-solid fa-phone"></i> Phone Number: +1 (XXX) XXX-XXXX </p>
-        <p><i class="fa-solid fa-fax"></i></i> FAX:</p>
-        <h1 class="text-5xl my-2 scrollHide">Contact Form</h1>
-        <div>
-            <Form class="border-2 bg-gray-500 p-2">
-                <label for="firstName">First Name<sup class="text-red-500">*</sup></label><br>
-                <input type="text" id="firstName" name="firstname" placeholder="your name.."><br><br>
+        <p><i class="fa-regular fa-envelope"></i> Email: milanfernandojobs.occupant638@aleeas.com</p>
+        <p><i class="fa-brands fa-linkedin"></i> Linkin: <a a class="hover:text-sky-500 hover:underline" href="https://www.linkedin.com/in/milan-fernando-5a9652293/">Milan Fernando</a></p>
+        <p><i class="fa-solid fa-fax"></i></i> FAX: Maybe one day :)</p>
+<!--        <h1 class="text-5xl my-2 scrollHide">Contact Form</h1>-->
+<!--        <div>-->
+<!--            <Form class="border-2 bg-gray-500 p-2">-->
+<!--                <label for="firstName">First Name<sup class="text-red-500">*</sup></label><br>-->
+<!--                <input type="text" id="firstName" name="firstname" placeholder="your name.."><br><br>-->
 
-                <label for="lastName">Last Name<sup class="text-red-500">*</sup></label><br>
-                <input type="text" id="lastName" name="lastname" placeholder="your last name.." ><br><br>
+<!--                <label for="lastName">Last Name<sup class="text-red-500">*</sup></label><br>-->
+<!--                <input type="text" id="lastName" name="lastname" placeholder="your last name.." ><br><br>-->
 
-                <label for="postcode">Post Code/Zip Code</label><br>
-                <input type="text" id="postcode" name="postcode/zipcode" placeholder="PostCode or ZipCode.."><br><br>
+<!--                <label for="postcode">Post Code/Zip Code</label><br>-->
+<!--                <input type="text" id="postcode" name="postcode/zipcode" placeholder="PostCode or ZipCode.."><br><br>-->
 
-                <label for="company">Company</label><br>
-                <input type="text" id="company" name="company" placeholder="Company.."><br><br>
+<!--                <label for="company">Company</label><br>-->
+<!--                <input type="text" id="company" name="company" placeholder="Company.."><br><br>-->
 
-                <label for="subject">Subject<sup class="text-red-500">*</sup></label><br>
-                <input type="text" id="subject" name="subject" placeholder="Subject.."><br><br> 
+<!--                <label for="subject">Subject<sup class="text-red-500">*</sup></label><br>-->
+<!--                <input type="text" id="subject" name="subject" placeholder="Subject.."><br><br> -->
 
-                <label for="message">Message<sup class="text-red-500">*</sup></label><br>
-                <p class="error text-[#FF0000]"></p>
-                <textarea id="message" name="message" placeholder="Message.."></textarea>
-                
-                <input class="p-2 my-2 border hover:bg-slate-300  "type="submit" value="Submit">
-            </Form>
+<!--                <label for="message">Message<sup class="text-red-500">*</sup></label><br>-->
+<!--                <p class="error text-[#FF0000]"></p>-->
+<!--                <textarea id="message" name="message" placeholder="Message.."></textarea>-->
+<!--                -->
+<!--                <input class="p-2 my-2 border hover:bg-slate-300  "type="submit" value="Submit">-->
+<!--            </Form>-->
         </div>
     </div>
     </section>
