--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <button class="videoPause pause text-4xl text-center text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i> Pause</button>
         <div class="flex flex-col mt-16 mx-8 mb-4 md:mt-0 md:bottom-16 md:absolute md:max-w-[70%] ">
             <h1 class="text-5xl my-2 mt-4 scrollHide mb-8">About me</h1>
-            <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
-            <i class="text-base text-slate-400">Flavour Text</i>
+            <p class="text-2l">I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention.</p>
+            <i class="text-base text-slate-400">Click below for more </i>
             <a class="text-left border w-fit mt-2 p-1 bg-gray-800 hover:bg-gray-600 " href="about.html">Want to know more</a>
         </div>
     </div>
