Added All Content Except Image for final portfolio and replace placeholder on index.html

--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
     <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600 w-screen md:w-11/12 mx-auto" alt="About Banner" > <!--- https://placeholder.pics/svg/800x400-->
     <section class="mx-8 my-16">
         <h1 class="text-5xl my-6 scrollHide">About me</h1>
-        <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
-        <p class="text-2xl">I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention. This was especially true for technologies like reinforced learning. I have always been the one in my family to help with tech issues. I have enjoyed this journey of betterment in software development during iO Academy. </p>
+        <img src="pictureOfMe.jpg" width="200px" height="200px" alt="Person with glasses">
+        <p>I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention. This was especially true for technologies like reinforced learning. I have always been the one in my family to help with tech issues. I have enjoyed this journey of betterment in software development during iO Academy. </p>
     </section>
     <section class="mx-8 my-16">
         <h1 class="text-5xl my-6 scrollHide text-center">Skills</h1>
