--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <img src="PortfolioLogo.svg" class="bg-cover bg-gradient-to-b from-gray-700 to-gray-600 w-screen md:w-11/12 mx-auto"alt="Contact Banner" width=100%>
     <div class="m-6">
         <h1 class="text-5xl scrollHide">Contact Me</h1>
-        <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
+        <img src="pictureOfMe.jpg" width="200" height="200" alt="Person with glasses">
         <p><i class="fa-solid fa-pencil"></i> Name: Milan Fernando</p>
         <p><i class="fa-regular fa-envelope"></i> Email: milanfernandojobs.occupant638@aleeas.com</p>
         <p><i class="fa-brands fa-linkedin"></i> Linkin: <a a class="hover:text-sky-500 hover:underline" href="https://www.linkedin.com/in/milan-fernando-5a9652293/">Milan Fernando</a></p>
