--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button class="videoPause pause text-4xl text-center text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i> Pause</button>
         <div class="flex flex-col mt-16 mx-8 mb-4 md:mt-0 md:bottom-16 md:absolute md:max-w-[70%] ">
             <h1 class="text-5xl my-2 mt-4 scrollHide mb-8">About me</h1>
-            <p class="text-2l">I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention.</p>
+            <p class="text-2l">Hello I am Milan Fernando.I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention.</p>
             <i class="text-base text-slate-400">Click below for more </i>
             <a class="text-left border w-fit mt-2 p-1 bg-gray-800 hover:bg-gray-600 " href="about.html">Want to know more</a>
         </div>
@@ -72,8 +72,8 @@
     <img class="w-screen sm:max-w-fit sm:mx-auto my-16" src="https://placeholder.pics/svg/600x300" alt="Contact banner placeholder">
     <div class="flex flex-col mt-16 mx-8 mb-4">
         <h1 class="text-5xl my-2 scrollHide mb-8">Contact me</h1>
-        <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
-        <i class="text-base text-slate-400">Flavour Text</i>
+        <p class="text-2l">Please contact me through my email milanfernandojobs.occupant638@aleeas.com</p>
+        <i class="text-base text-slate-400">Need more details check Contact Info</i>
         <a class="text-left border w-fit mt-2 p-1 bg-gray-800 hover:bg-gray-600 " href="contact.html">Contact Info</a>
     </div>
     </section>
