--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section class="videoSection">
     <div class="relative">
-<iframe class="youtube-video" width="100%" src="https://www.youtube.com/embed/r1IrIsSWzxI?si=gE6VDXzLbfAsXbNL&amp;controls=0&controls=0&enablejsapi=1&fs=0&loop=1&modestbranding=1&iv_load_policy=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <button class="videoPause pause text-4xl text-center text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i> Pause</button>
+<iframe class="youtube-video" width="100%" src="https://www.youtube.com/embed/r1IrIsSWzxI?si=gE6VDXzLbfAsXbNL&amp;controls=0&controls=0&enablejsapi=1&fs=0&loop=1&modestbranding=1&iv_load_policy=3&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <button class="videoPause pause text-4xl text-center text-black absolute md:bottom-4 right-4 bg-white p-2 rounded-full "><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i> Pause</button>
         <div class="flex flex-col mt-16 mx-8 mb-4 md:mt-0 md:bottom-16 md:absolute md:max-w-[70%] ">
             <h1 class="text-5xl my-2 mt-4 scrollHide mb-8">About me</h1>
             <p class="text-2l">Hello I am Milan Fernando.I am a motivated, full-stack developer with an aptitude for the backend. In my free time, I like to play video games and learn about random things that grab my attention.</p>
